<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview_product"
            android:layout_width="@dimen/product_image_width"
            android:layout_height="@dimen/product_image_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/product_image_bottom_margin"
            android:layout_marginTop="@dimen/product_image_top_margin"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/add_product_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/add_product_edittext_lef_margin"
            android:layout_marginRight="@dimen/add_product_edittext_right_margin"
            android:layout_marginTop="@dimen/add_product_edittext_top_margin"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textSize="@dimen/detal_product_text_size" />

                <EditText
                    android:id="@+id/edittext_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_lef_margin"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/price"
                    android:textSize="@dimen/detal_product_text_size" />

                <EditText
                    android:id="@+id/edittext_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_lef_margin"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_lef_margin"
                    android:gravity="center_vertical"
                    android:text="@string/euro_sign"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/quantity"
                    android:textSize="@dimen/detal_product_text_size" />

                <EditText
                    android:id="@+id/edittext_product_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/default_lef_margin"
                    android:inputType="number"
                    android:maxLines="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_lef_margin"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imagebutton_decrement_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_minus" />

                    <EditText
                        android:id="@+id/edittext_quantity_increment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/default_lef_margin"
                        android:gravity="center_horizontal"
                        android:hint="@string/edittext_quantity_increment_hint"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="@string/default_increment" />

                    <ImageButton
                        android:id="@+id/imagebutton_increment_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_lef_margin"
                        android:src="@drawable/ic_add" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/supplier_name"
                android:textSize="@dimen/detal_product_text_size" />

            <EditText
                android:id="@+id/edittext_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <Button
                android:id="@+id/button_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_from_supplier" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
